--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/normalize.css">
 
+    <script src="js/plugins.js"></script>
+    <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+    <script src="js/vendor/jquery-1.12.0.min.js"></script>
+
+
 </head>
-<body data-responsejs='{ "create": [
-{ "prop": "width", "breakpoints": [0, 320, 481, 641, 961, 1025, 1281] }
-]}'>
+<body >
 
 
 
@@ -36,6 +39,8 @@
     <a  href="mailto:cpa@millnerwoodruff.com" style="color: #ffffff; font-family: Merriweather; font-size: 16px" >cpa@millnerwoodruff.com</a>
     <a  style="color: #ffffff; font-family: Merriweather; font-size: 24px" >Phone:</a>
     <a  style=" line-height: 36px; color: #ffffff; font-family: Merriweather; letter-spacing: 2px; font-size: 16px">(214)285-1522</a>
+    <a  style="color: #ffffff; font-family: Merriweather; font-size: 24px" >Fax:</a>
+    <a  style=" line-height: 36px; color: #ffffff; font-family: Merriweather; letter-spacing: 2px; font-size: 16px">(214)594-8270</a>
 </div>
 
 
@@ -116,6 +121,8 @@
 
     </div>
 
+
+
     <div>
 
 
@@ -146,22 +153,16 @@
     <img id="cover-image" src="Building21.jpg" style="width: 100vw">
 </picture>
 
-<!--
-<div class="test2">
-    <h2 id="FullSite" class="test3" style="color: #ffffff;">Delivering</h2><h2  class="test3" style="color: #520184;"> solutions </h2> <h2 class="test3" style="color: #ffffff"> catered to your needs.</h2>
-</div>
--->
-
-<!-- <img src="Building8.jpg" id="coverPhoto"/> -->
 
 
 
-<div class="container" style="padding-top:50px">
+<div id="mainBody" style="">
+
     <div class="row">
         <div  class="col-a-8">
-            <div class="row"style="padding:50px;padding-bottom: 15px; padding-top: 0px">
+            <div style="padding:50px;padding-bottom: 15px; padding-top: 0px">
                 <div class="col-a-12">
-                    <div id="titleBanner1" class="titleBanner" style="box-shadow: 2.5px 2.5px 5px #666666;width: 100%; background-color: #520184; text-align: center; color: white; font-family: Merriweather; font-size: 28px; font-weight: lighter; margin-bottom: 15px; padding-top: 7px; padding-bottom: 7px">
+                    <div id="titleBanner1" class="titleBanner" style=" box-shadow: 2.5px 2.5px 5px #666666;width: 100%; background-color: #520184; text-align: center; color: white; font-family: Merriweather; font-size: 28px; font-weight: lighter; margin-bottom: 15px; padding-top: 7px; padding-bottom: 7px">
 
 
                         Tax | Audit | Consulting
@@ -173,7 +174,7 @@
                     <!--<p>Lorem ipsum dolor sit amet, mea ex ferri adhuc. Nec inciderint voluptatibus in. Minim quidam definiebas eu ius. Ea has eirmod petentium maluisset, nusquam interesset ne vel. Dico legendos consectetuer eam id, mei diam saepe suavitate at, quot inermis inciderint his in. Id pri tibique lobortis. Autem vidisse maiorum et mel. Id saepe cetero definiebas vel. Vel solet verterem electram ex, ex minim consequat qui. At stet choro eos. Agam regione has no, at nihil reprehendunt has, omnis voluptua adipisci in vis. In molestie mandamus referrentur has, id eos phaedrum incorrupte. </p>
                --> </div>
             </div>
-            <div class="row" style="padding:50px; padding-bottom: 15px; padding-top: 15px">
+            <div style="padding:50px; padding-bottom: 15px; padding-top: 15px">
                 <div class="col-a-12">
                     <div class="titleBanner" style="box-shadow: 2.5px 2.5px 5px #666666;width: 100%; background-color: #520184; text-align: center; color: white; font-family: Merriweather; font-size: 28px; font-weight: lighter; margin-bottom: 15px; padding-top: 7px; padding-bottom: 7px">
 
@@ -186,11 +187,26 @@
                     <p>Lorem ipsum dolor sit amet, mea ex ferri adhuc. Nec inciderint voluptatibus in. Minim quidam definiebas eu ius. Ea has eirmod petentium maluisset, nusquam interesset ne vel. Dico legendos consectetuer eam id, mei diam saepe suavitate at, quot inermis inciderint his in. Id pri tibique lobortis. Autem vidisse maiorum et mel. </p>
                     <p>Lorem ipsum dolor sit amet, mea ex ferri adhuc. Nec inciderint voluptatibus in. Minim quidam definiebas eu ius. Ea has eirmod petentium maluisset, nusquam interesset ne vel. Dico legendos consectetuer eam id, mei diam saepe suavitate at, quot inermis inciderint his in. Id pri tibique lobortis. Autem vidisse maiorum et mel. </p>
 
+                    <div style=" text-align: center; margin-left: 50%">
+
+                        <a href="directory"style="text-decoration: none">
+
+                            <div id="seeMorePosts" style="text-decoration: none; border: solid #520184; width:200px; padding: 10px; font-family: Merriweather; color: #520184; text-align: center; left: 50%; margin-left: -100px">
+
+                                Meet the team
+
+                            </div>
+
+
+                        </a>
+
+
+                    </div>
 
 
                 </div>
             </div>
-            <div class="row" style="padding:50px; padding-top: 15px; text-align: center; align-content: center">
+            <div style="padding:50px; padding-top: 15px; text-align: center; align-content: center">
 
 
                 <img src="people2.jpg" style="width: 100%; height: 100%">
@@ -210,7 +226,7 @@
 
         </div>
         <div class="col-a-4" style="padding:50px; padding-bottom: 40px; padding-top: 0px; float:left">
-            <div class="row">
+            <div>
                 <div class="col-a-12">
                     <div class="titleBanner" style="box-shadow: 2.5px 2.5px 5px #666666;width: 100%; background-color: #520184; text-align: center; color: white; font-family: Merriweather; font-size: 28px; font-weight: lighter; margin-bottom: 15px; padding-top: 7px; padding-bottom: 7px">
 
@@ -384,6 +400,21 @@
 
                 </div>
             </div>
+            <div style=" text-align: center; margin-left: 50%; margin-top: 30px">
+
+                <a href="/blog" style="text-decoration: none">
+
+                    <div id="seeMorePosts2" style="text-decoration: none; border: solid #520184; width:200px; padding: 10px; font-family: Merriweather; color: #520184; text-align: center; left: 50%; margin-left: -100px">
+
+                        See more
+
+                    </div>
+
+
+                </a>
+
+
+            </div>
         </div>
     </div>
 </div>
@@ -399,6 +430,10 @@
         </div>
         <div class="col" style="text-align: center">
             <h8 style="color: white">cpa@millnerwoodruff.com</h8>
+        </div>
+
+        <div class="col" style="text-align: center">
+            <h8 style="color: white">Fax:(214)594-8270</h8>
         </div>
         <div class="col" style="text-align: center">
             <h8 style="color: white">Copyright © 2017 By Millner | Woodruff CPAs </h8>
@@ -421,11 +456,63 @@
     $(document).ready(function(){
 
 
+        $("#seeMorePosts").hover(function() {
 
 
-        $( "#banner-image").hide().fadeIn(1000);
+
+
+
+            $( "#seeMorePosts" ).animate({
+                backgroundColor: "#520184"
+            }, 200);
+            $( "#seeMorePosts" ).animate({
+                color: "#ffffff"
+            }, 200);
+
+
+
+
+
+
+        }, function() {
+
+            $("#seeMorePosts").stop().css("background-color", "#ffffff");
+            $("#seeMorePosts").stop().css("color", "#520184");
+
+
+
+        });
+
+        $("#seeMorePosts2").hover(function() {
+
+
+
+
+
+            $( "#seeMorePosts2" ).animate({
+                backgroundColor: "#520184"
+            }, 200);
+            $( "#seeMorePosts2" ).animate({
+                color: "#ffffff"
+            }, 200);
+
+
+
+
+
+
+        }, function() {
+
+            $("#seeMorePosts2").stop().css("background-color", "#ffffff");
+            $("#seeMorePosts2").stop().css("color", "#520184");
+
+
+
+        });
         $( "#contactInfo").hide().fadeIn(2000);
         $( "#contactInfo2").hide().fadeIn(2000);
+        $( "#contactInfo3").hide().fadeIn(2000);
+
     });
 
 
