--- a/index.html
+++ b/index.html
@@ -160,9 +160,9 @@
 
     <div class="row">
         <div  class="col-a-8">
-            <div style="padding:50px;padding-bottom: 15px; padding-top: 0px">
+            <div style="padding:30px;padding-bottom: 15px; padding-top: 0px">
                 <div class="col-a-12">
-                    <div id="titleBanner1" class="titleBanner" style=" box-shadow: 2.5px 2.5px 5px #666666;width: 100%; background-color: #520184; text-align: center; color: white; font-family: Merriweather; font-size: 28px; font-weight: lighter; margin-bottom: 15px; padding-top: 7px; padding-bottom: 7px">
+                    <div id="titleBanner1" class="titleBanner" style=" box-shadow: 2.5px 2.5px 5px #666666;width: 100%; background-color: #520184; text-align: center; color: white; font-family: Merriweather; font-size: 28px; font-weight: lighter; margin-bottom: 15px; padding-top: 7px; padding-bottom: 7px; padding-left: 7px; padding-right: 7px">
 
 
                         Tax | Audit | Consulting
@@ -174,7 +174,7 @@
                     <!--<p>Lorem ipsum dolor sit amet, mea ex ferri adhuc. Nec inciderint voluptatibus in. Minim quidam definiebas eu ius. Ea has eirmod petentium maluisset, nusquam interesset ne vel. Dico legendos consectetuer eam id, mei diam saepe suavitate at, quot inermis inciderint his in. Id pri tibique lobortis. Autem vidisse maiorum et mel. Id saepe cetero definiebas vel. Vel solet verterem electram ex, ex minim consequat qui. At stet choro eos. Agam regione has no, at nihil reprehendunt has, omnis voluptua adipisci in vis. In molestie mandamus referrentur has, id eos phaedrum incorrupte. </p>
                --> </div>
             </div>
-            <div style="padding:50px; padding-bottom: 15px; padding-top: 15px">
+            <div style="padding:30px; padding-bottom: 15px; padding-top: 15px">
                 <div class="col-a-12">
                     <div class="titleBanner" style="box-shadow: 2.5px 2.5px 5px #666666;width: 100%; background-color: #520184; text-align: center; color: white; font-family: Merriweather; font-size: 28px; font-weight: lighter; margin-bottom: 15px; padding-top: 7px; padding-bottom: 7px">
 
@@ -206,7 +206,7 @@
 
                 </div>
             </div>
-            <div style="padding:50px; padding-top: 15px; text-align: center; align-content: center">
+            <div style="padding:30px; padding-top: 15px; text-align: center; align-content: center">
 
 
                 <img src="people2.jpg" style="width: 100%; height: 100%">
@@ -225,7 +225,7 @@
             </div>
 
         </div>
-        <div class="col-a-4" style="padding:50px; padding-bottom: 40px; padding-top: 0px; float:left">
+        <div class="col-a-4" style="padding:30px; padding-bottom: 40px; padding-top: 0px; float:left">
             <div>
                 <div class="col-a-12">
                     <div class="titleBanner" style="box-shadow: 2.5px 2.5px 5px #666666;width: 100%; background-color: #520184; text-align: center; color: white; font-family: Merriweather; font-size: 28px; font-weight: lighter; margin-bottom: 15px; padding-top: 7px; padding-bottom: 7px">
@@ -420,7 +420,7 @@
 </div>
 
 <div  class="container-fluid" style=" background-color: #555555">
-    <div id="bottom-bar" class="row-center" style="padding:75px">
+    <div id="bottom-bar" class="row-center" style="padding:30px">
         <div class="col" style="text-align: center">
             <h8 style="color: white">4325 Windsor Centre Trail, Suite 400
                 Flower Mound, Texas 75028</h8>
