--- a/directory/index.html
+++ b/directory/index.html
@@ -152,11 +152,11 @@
 
 
 
-<div id="mainBody" style="margin-top: 8vw; padding: 50px">
+<div id="mainBody2" style=" padding: 0px; width: 84%; margin-left: 8%">
 
-    <div class="row" style="margin-bottom: 2.5vw">
+    <div class="row" style="">
 
-        <div id="titleBanner1" class="titleBanner" style="box-shadow: 2.5px 2.5px 5px #666666;width: 100%; background-color: #520184; text-align: center; color: white; font-family: Merriweather; font-size: 28px; font-weight: lighter; margin-bottom: 15px; padding-top: 7px; padding-bottom: 7px">
+        <div id="titleBanner1" class="titleBanner" style="box-shadow: 2.5px 2.5px 5px #666666;width: 100%; background-color: #520184; text-align: center; color: white; font-family: Merriweather; font-size: 28px; font-weight: lighter; padding-top: 7px; padding-bottom: 7px">
 
 
             Meet the Team
@@ -168,7 +168,7 @@
 
 
     </div>
-    <div class="row" style="text-align: center">
+    <div class="row" style="text-align: center; padding-right: 2%; padding-right: 2%; margin-left: 2%">
 
         <div class="box" style=" text-align: center; margin-left: 0%">
             <div class="stay-in-place" style=" background-image: url(portrait.jpg); background-size: cover;">
@@ -235,7 +235,7 @@
         </div>
 
     </div>
-    <div class="row" style="margin-top: 5vw">
+    <div class="row" style=" padding-right: 2%; padding-right: 2%; margin-left: 2%">
 
         <div class="box" style="margin-left: 0%">
             <div class="stay-in-place" style=" background-image: url(portrait.jpg); background-size: cover;">
@@ -306,7 +306,7 @@
 </div>
 
 <div  class="container-fluid" style=" background-color: #555555; margin-top: 150px">
-    <div id="bottom-bar" class="row-center" style="padding:75px">
+    <div id="bottom-bar" class="row-center" style="padding:30px">
         <div class="col" style="text-align: center">
             <h8 style="color: white">4325 Windsor Centre Trail, Suite 400
                 Flower Mound, Texas 75028</h8>
