--- a/directory/index.html
+++ b/directory/index.html
@@ -154,20 +154,17 @@
 
 <div id="mainBody2" style=" padding: 0px; width: 84%; margin-left: 8%">
 
-    <div class="row" style="">
-
-        <div id="titleBanner1" class="titleBanner" style="box-shadow: 2.5px 2.5px 5px #666666;width: 100%; background-color: #520184; text-align: center; color: white; font-family: Merriweather; font-size: 28px; font-weight: lighter; padding-top: 7px; padding-bottom: 7px">
 
 
-            Meet the Team
-
-
+        <div style="margin-bottom: 2.5vw; text-align: center">
+            <div class="titleBanner" style="box-shadow: 2.5px 2.5px 5px #666666;width: 100%; background-color: #520184; text-align: center; color: white; font-family: Merriweather; font-size: 28px; font-weight: lighter;  padding: 10px; padding-top: 7px; padding-bottom: 7px">
+                Meet the Team
+            </div>
         </div>
 
 
 
 
-    </div>
     <div class="row" style="text-align: center; padding-right: 2%; padding-right: 2%; margin-left: 2%">
 
         <div class="box" style=" text-align: center; margin-left: 0%">
