--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
             </div>
             <div style=" text-align: center; margin-left: 50%">
 
-                <a href="directory"style="text-decoration: none">
+                <a href="directory"style="text-decoration: none; ">
 
                     <div id="seeMorePosts" style="text-decoration: none; border: solid #520184; width:200px; padding: 10px; font-family: Merriweather; color: #520184; text-align: center; left: 50%; margin-left: -100px">
 
@@ -294,7 +294,7 @@
 
                     <a href="post/index.html?postid=2" style="text-decoration: none">
 
-                    <div id="article2"  style="background-size: cover;box-shadow: 2.5px 2.5px 5px #666666;margin-top: 40px; width: 100%; background-color: white; height: 275px; background-image: url(christmas.jpg); background-position: center; text-align: center; background-repeat: no-repeat; ">
+                    <div id="article2"  style="background-size: cover;box-shadow: 2.5px 2.5px 5px #666666;margin-top: 40px; width: 100%; background-color: white; height: 275px; background-image: url(christmas-tree.jpg); background-position: center; text-align: center; background-repeat: no-repeat; ">
 
 
 
@@ -420,7 +420,7 @@
     </div>
 </div>
 
-<div  class="container-fluid" style=" background-color: #555555">
+<div  class="container-fluid" style=" background-color: #555555; margin-top: 40px">
     <div id="bottom-bar" class="row-center" style="padding:30px">
         <div class="col" style="text-align: center">
             <h8 style="color: white">4325 Windsor Centre Trail, Suite 400
