--- a/directory/index.html
+++ b/directory/index.html
@@ -235,7 +235,7 @@
     <div class="row" style=" padding-right: 2%; padding-right: 2%; margin-left: 2%">
 
         <div class="box" style="margin-left: 0%">
-            <div class="stay-in-place" style=" background-image: url(portrait.jpg); background-size: cover;">
+            <div class="stay-in-place" style=" background-image: url(jane2.jpg); background-size: cover;">
                 <div class="bioBox" style="position: absolute; width: 100%; height: 20%; bottom: 0px; background-color: #e6e6e6; text-align: center">
                     <div style="">
                         <div style="padding-top: 10px; width: 100%; text-align: center; font-family: Merriweather; font-weight: lighter; color: #4d4d4d;">
@@ -256,7 +256,7 @@
             </div>
         </div>
         <div class="box" style="">
-            <div class="stay-in-place" style=" background-image: url(john.jpg); background-size: cover;">
+            <div class="stay-in-place" style=" background-image: url(john2.jpg); background-size: cover;">
                 <div class="bioBox" style="position: absolute; width: 100%; height: 20%; bottom: 0px; background-color: #e6e6e6; text-align: center">
                     <div style="">
                         <div style="padding-top: 10px; width: 100%; text-align: center; font-family: Merriweather; font-weight: lighter; color: #4d4d4d;">
@@ -277,7 +277,7 @@
             </div>
         </div>
         <div class="box" style="">
-            <div class="stay-in-place" style=" background-image: url(jane.jpg); background-size: cover;">
+            <div class="stay-in-place" style=" background-image: url(john3.png); background-size: cover;">
                 <div class="bioBox" style="position: absolute; width: 100%; height: 20%; bottom: 0px; background-color: #e6e6e6; text-align: center">
                     <div style="">
                         <div style="padding-top: 10px; width: 100%; text-align: center; font-family: Merriweather; font-weight: lighter; color: #4d4d4d;">
