--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 
                 <a href="directory"style="text-decoration: none; ">
 
-                    <div id="seeMorePosts" style="text-decoration: none; border: solid #520184; width:200px; padding: 10px; font-family: Merriweather; color: #520184; text-align: center; left: 50%; margin-left: -100px">
+                    <div id="seeMorePosts" style="text-decoration: none; margin-bottom: 40px; border: solid #520184; width:200px; padding: 10px; font-family: Merriweather; color: #520184; text-align: center; left: 50%; margin-left: -100px">
 
                         Meet the team
 
