--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
                 -->
             </div>
-            <div style=" text-align: center; margin-left: 50%">
+            <div style=" text-align: center; margin-left: 50%; margin-bottom: 40px">
 
                 <a href="directory"style="text-decoration: none; ">
 
